# OpenClaw-Shell

./: .env.example  .gitignore  README.md  SKILL.md  agent.md  main.py  pyproject.toml
openclaw_shell/: configuration.py  interface.py  session.py
